FFL-203 - Fix the logic behind the version_compare function.

--- a/admin/view/adminhtml/web/css/source/_module.less
+++ b/admin/view/adminhtml/web/css/source/_module.less
@@ -17,16 +17,16 @@ a[id*='autoffl_refactored_group_information'] {
     .ffl-version-warning {
         display: inline-block;
     }
-    a.match-version {
+    a.same-version {
         font-weight: bold;
     }
-    .match-version {
+    .same-version {
         color: #009933;
     }
-    .last-version {
+    .lower-version {
         color: #cc3300;
     }
-    .dev-version {
+    .developer-version {
         color: #333333;
     }
 }
